--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "chat-ui",
-	"version": "0.20.0",
+	"name": "playground-secure-chat",
+	"version": "0.0.1",
 	"private": true,
 	"packageManager": "npm@9.5.0",
 	"scripts": {
@@ -13,7 +13,6 @@
 		"format": "prettier --write .",
 		"test": "vitest",
 		"updateLocalEnv": "vite-node --options.transformMode.ssr='/.*/' scripts/updateLocalEnv.ts",
-		"populate": "vite-node --options.transformMode.ssr='/.*/' scripts/populate.ts",
 		"config": "vite-node --options.transformMode.ssr='/.*/' scripts/config.ts",
 		"prepare": "husky",
 		"rules:check": "npm run check && npm run lint && npm test"
